tests/errors/insufficient-guard.fil
component Main<G>(
  @[G, G+2] left: 32,
  @[G, G+1] + @exact[G, G+1] sel: 1
) -> (
  @[G, G+1] out: 32,
) {
  out = sel ? left;
}
